# Custom-controller-for-the-cube-drone

./: README.md
cubedrone/: CMakeLists.txt  package.xml
cubedrone/launch/: gazebo.launch  rangefinder.launch
cubedrone/src/: cubecontroller.cpp  cubedrone_plugin.cc  cuberangefinder.cpp  movingcubedrone.cpp
cubedrone/urdf/: cubedrone.urdf.xacro
cubedrone/worlds/: rangefinder.world
cubedrone/worlds/house/: model.sdf
